# dashcam

./: CMakeLists.txt  ros_dashcam.rosinstall
nodes/: CMakeLists.txt
nodes/camera/: CMakeLists.txt  camera.cc
nodes/logger/: #ec8c949200318d4d29dbb28739b5866843aea5d1#  CMakeLists.txt  Logger.cc  Logger.hh  Serializer.hh  logger.cc
